# cmake_utils

./: .gitignore  CMakeLists.txt  README.md  cmake_utils-config.cmake  cu_add_library.cmake  generate_gitversion.cmake
